[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameplay/player/Freighter.gd" type="Script" id=1]
[ext_resource path="res://assets/player/freighter.png" type="Texture" id=2]
[ext_resource path="res://gameplay/ProgressBar.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 19.3224

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 900.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 150.0

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 150.0

[node name="Freighter" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
capacity = 100
speed = 100
state_change_wait_time = 1
harvest_timer_wait_time = 1
building_detection_radius = 900
harvest_detection_radius = 150
player_detection_radius = 150

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="BuildingDetector" type="Area2D" parent="." index="2"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingDetector" index="0"]

shape = SubResource( 2 )

[node name="HarvestDetector" type="Area2D" parent="." index="3"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 9
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarvestDetector" index="0"]

shape = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="." index="4"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]

shape = SubResource( 4 )

[node name="HarvestTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="ProgressBar" parent="." index="6" instance=ExtResource( 3 )]

margin_top = 30.0
margin_bottom = 40.0
current = 0

[node name="StateChangeTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="FadeTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Tween" type="Tween" parent="." index="9"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="timeout" from="HarvestTimer" to="." method="_on_HarvestTimer_timeout"]

[connection signal="timeout" from="StateChangeTimer" to="." method="_on_StateChangeTimer_timeout"]

[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]


